完成视频解码功能

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,28 +25,27 @@ set(FFMPEG_LIB avcodec.lib
         swresample.lib
         swscale.lib)
 
-#Logger
-add_library(Logger SHARED src/LogWriter.cpp src/ConsoleLogWriter.cpp)
-target_compile_definitions(Logger PRIVATE "BUILD_LOGGER=1")
+#XLog
+add_library(XLog SHARED src/LogWriter.cpp src/ConsoleLogWriter.cpp)
+target_compile_definitions(XLog PRIVATE "BUILD_XLOG=1")
 
-#D3D
-add_library(D3DUtils SHARED src/D3DUtils.cpp src/D3DVideoProcessor.cpp)
-target_link_libraries(D3DUtils Logger d3d11.lib)
-target_compile_definitions(D3DUtils PRIVATE "BUILD_D3D_UTILS=1")
-target_compile_definitions(D3DUtils PRIVATE "D3D_DEBUG_INFO")
+#XGraphic
+add_library(XGraphic SHARED src/D3DUtils.cpp src/D3DVideoProcessor.cpp)
+target_link_libraries(XGraphic XLog d3d11.lib)
+target_compile_definitions(XGraphic PRIVATE "BUILD_XGRAPHIC=1")
 
-#VideoPlayerCore
-add_library(VideoPlayerCore SHARED src/Player.cpp src/Util.cpp)
-target_include_directories(VideoPlayerCore PRIVATE ${FFMPEG_INC_PATH})
-target_link_directories(VideoPlayerCore PRIVATE ${FFMPEG_LIB_PATH})
-target_link_libraries(VideoPlayerCore ${FFMPEG_LIB} Logger D3DUtils d3d9.lib)
-target_compile_definitions(VideoPlayerCore PRIVATE "BUILD_VP=1")
+#XVideo
+add_library(XVideo SHARED src/Player.cpp src/Util.cpp)
+target_include_directories(XVideo PRIVATE ${FFMPEG_INC_PATH})
+target_link_directories(XVideo PRIVATE ${FFMPEG_LIB_PATH})
+target_link_libraries(XVideo ${FFMPEG_LIB} XLog XGraphic d3d9.lib)
+target_compile_definitions(XVideo PRIVATE "BUILD_XVIDEO=1")
 
-#VPTest
+#Test
 add_executable(VideoPlayerTest src/Test.cpp)
 target_include_directories(VideoPlayerTest PRIVATE ${FFMPEG_INC_PATH} ${LODEPNG_INC_PATH})
 target_link_directories(VideoPlayerTest PRIVATE ${FFMPEG_LIB_PATH})
 target_link_libraries(VideoPlayerTest
-        VideoPlayerCore
+        XVideo
         LODEPNG_LIB
         ${FFMPEG_LIB})
