modify project name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
-project(VIDEO_PLAYER)
+project(XVideoLib)
 set(CMAKE_CXX_STANDARD 11)
 
 #兼容包含中文字符的UTF8代码文件内容
@@ -7,13 +7,13 @@ add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 
 #LodePNG
-set(LODEPNG_PATH ${VIDEO_PLAYER_SOURCE_DIR}/thirdparty/lodepng)
+set(LODEPNG_PATH ${XVideoLib_SOURCE_DIR}/thirdparty/lodepng)
 set(LODEPNG_INC_PATH ${LODEPNG_PATH})
 set(LODEPNG_SRC ${LODEPNG_PATH}/lodepng.cpp)
 add_library(LODEPNG_LIB STATIC ${LODEPNG_SRC})
 
 #FFMpeg
-set(FFMPEG_PATH ${VIDEO_PLAYER_SOURCE_DIR}/thirdparty/ffmpeg)
+set(FFMPEG_PATH ${XVideoLib_SOURCE_DIR}/thirdparty/ffmpeg)
 set(FFMPEG_INC_PATH ${FFMPEG_PATH}/include)
 set(FFMPEG_LIB_PATH ${FFMPEG_PATH}/lib)
 set(FFMPEG_LIB avcodec.lib
